--- a/tag/tag.vcxproj.filters
+++ b/tag/tag.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="src\GameRenderer.cpp">
       <Filter>Source Files\gfx</Filter>
     </ClCompile>
+    <ClCompile Include="src\TimeUtils.cpp">
+      <Filter>Source Files\utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\TimeUtils.h">
