--- a/tag/tag.vcxproj
+++ b/tag/tag.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)include;$(ProjectDir)libs\glew-2.1.0\include;$(ProjectDir)libs\glfw-3.3.8\include;$(ProjectDir)libs\glm-0.9.9.5;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)include;$(ProjectDir)libs\enet-1.3.17;$(ProjectDir)libs\glew-2.1.0\include;$(ProjectDir)libs\glfw-3.3.8\include;$(ProjectDir)libs\glm-0.9.9.5;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <TreatWarningAsError>true</TreatWarningAsError>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
@@ -125,7 +125,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)include;$(ProjectDir)libs\glew-2.1.0\include;$(ProjectDir)libs\glfw-3.3.8\include;$(ProjectDir)libs\glm-0.9.9.5;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)include;$(ProjectDir)libs\enet-1.3.17;$(ProjectDir)libs\glew-2.1.0\include;$(ProjectDir)libs\glfw-3.3.8\include;$(ProjectDir)libs\glm-0.9.9.5;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -151,7 +151,6 @@
     <ClCompile Include="src\ProgramOptions.cpp" />
     <ClCompile Include="src\Rect.cpp" />
     <ClCompile Include="src\Shaders.cpp" />
-    <ClCompile Include="src\Socket.cpp" />
     <ClCompile Include="src\TimeUtils.cpp" />
     <ClCompile Include="src\World.cpp" />
   </ItemGroup>
@@ -165,7 +164,6 @@
     <ClInclude Include="include\MathUtils.h" />
     <ClInclude Include="include\Player.h" />
     <ClInclude Include="include\Rect.h" />
-    <ClInclude Include="include\Socket.h" />
     <ClInclude Include="include\TimeUtils.h" />
     <ClInclude Include="include\World.h" />
   </ItemGroup>
